BusOne/src/objects/Medical_Discussion_vod__c.object
<CustomObject>
    <description>Used to capture Medical Discussions that occur during an Interaction. The layout of the Medical Discussion section is displayed based on the page layout of the selected Medical Discussion record type.</description>
    <fields>
        <fullName>Account_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to an Account Tactic, maintains the reference to that Tactic.</description>
        <label>Account Tactic</label>
        <referenceTo>Account_Tactic_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account for which the Medical Discussion occurred.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>The type of entity who the Medical Discussion is created for.</description>
        <label>Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Person_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Event_vod</fullName>
                </value>
                <value>
                    <fullName>Group_Account_vod</fullName>
                </value>
                <value>
                    <fullName>User_vod</fullName>
                </value>
                <value>
                    <fullName>Contact_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call2_Mobile_ID_vod__c</fullName>
        <description>The Mobile Id of the Call record that the Medical Discussion is associated to.</description>
        <label>Call Mobile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The Date of the Call record that the Medical Discussion is associated to.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Contact, maintains the reference to that Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Product Group associated with the Medical Discussion.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discussion_vod__c</fullName>
        <description>Used to capture the details of the Medical Discussion</description>
        <label>Discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>Veeva internal field that ensures proper synchronization after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_vod__c</fullName>
        <description>The Interaction on which the Medical Discussion occurred.</description>
        <label>Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Medical Event, maintains the reference to that Event.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>The Mobile Id of the Medical Discussion record.</description>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to modify a submitted Medical Discussion without the need to unlock the record.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Product Strategy, maintains the reference to that Strategy.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a Product Tactic, maintains the reference to that Tactic.</description>
        <label>Product Tactic</label>
        <referenceTo>Product_Tactic_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions</relationshipLabel>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Product Detail or Topic associated with the Medical Discussion.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Medical Discussions (Product)</relationshipLabel>
        <relationshipName>Medical_Discussions_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Medical Discussion pertains to a User, maintains the reference to that User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zvod_Product_Map_vod__c</fullName>
        <description>Special field used to create dependent picklists on Medical Discussions based on product. The values for this field are the textual names of Product Details and Topics. This field should not be placed on any of the Medical Discussion page layouts.</description>
        <label>Product Map</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Medical Discussion</label>
    <nameField>
        <displayFormat>MDI{000000000}</displayFormat>
        <label>Medical Discussion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Discussions</pluralLabel>
    <recordTypes>
        <fullName>Medical_Discussion_vod</fullName>
        <active>true</active>
        <description>Standard record type used to create Medical Discussions.</description>
        <label>Medical_Discussion_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>